spacedeck-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: spacedeck
  name: spacedeck
spec:
  ports:
    - name: "9666"
      port: 9666
      targetPort: 9666
  selector:
    io.kompose.service: spacedeck
status:
  loadBalancer: {}
