spacedeck-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spacedeck-gateway
  namespace: spacedeck
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spacedeck
spec:
  hosts:
  - "*"
  gateways:
  - spacedeck-gateway
  http:
  - match:
    - uri:
        exact: /spacedeck
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: spacedeck
        port:
          number: 9666
